--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Arun Kandukuri</h1>
+                <h1><a href="#home">Arun Kandukuri</a></h1>
             </div>
             <nav>
                 <ul class="nav-links">
